# ocrina

./: .gitignore  README.md  pyproject.toml  setup.py
.github/: FUNDING.yml
ocrina/: __init__.py  __main__.py  ocrina.py
ocrina/services/: recognizer.py
ocrina/shared/utils/: logger.py
