[tool.poetry]
name = "ocrina"
version = "0.1.0"
description = "Oc(a)rina - Optical Character Recognition on demand"
authors = ["ZappaBoy <federico.zappone@justanother.cloud>"]
maintainers = ["ZappaBoy <federico.zappone@justanother.cloud>"]
readme = "README.md"
packages = [{ include = "ocrina" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pydantic = "^2.4.2"
pillow = "^11.0.0"
easyocr = "^1.7.2"
opencv-python = "^4.10.0.84"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
python-dotenv = "^1.0.0"
poetry2setup = "^1.1.0"
pytest-env = "^0.8.1"

[tool.pytest.ini_options]
addopts = "-s -v"
pythonpath = [
    "ocrina"
]
env = [
    "ENVIRONMENT=testing",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "pytest:main"
ocrina = "ocrina:main"